--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
 	<meta name=author content=mjaque@migueljaque.com />
 	<title>CRUDO v1.0</title>
 
-  <link rel=stylesheet href=css/reset.css />
+  	<link rel=stylesheet href=css/reset.css />
 	<link rel=stylesheet href=css/crudo.css />
+	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 
 <body>
